all functions ready

--- a/VibeBot/VibeBot/VibeBot.csproj
+++ b/VibeBot/VibeBot/VibeBot.csproj
@@ -119,6 +119,7 @@
   <ItemGroup>
     <Content Include="FodyWeavers.xml" />
     <Content Include="Recources\Complete.jpg" />
+    <None Include="Recources\icon.ico" />
     <None Include="Recources\Background.jpg" />
     <EmbeddedResource Include="lame.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
