--- a/VibeBot/VibeBot/VibeBot.csproj
+++ b/VibeBot/VibeBot/VibeBot.csproj
@@ -84,16 +84,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bot.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormMain.Designer.cs">
+      <DependentUpon>FormMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormAnalyze.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAnalyze.Designer.cs">
+      <DependentUpon>FormAnalyze.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormMain.resx">
+      <DependentUpon>FormMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAnalyze.resx">
+      <DependentUpon>FormAnalyze.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -123,6 +132,9 @@
     <Content Include="FodyWeavers.xml" />
     <Content Include="icon.ico" />
     <Content Include="Recources\Complete.jpg" />
+    <Content Include="Recources\gear.jpg" />
+    <Content Include="Recources\gearMove.gif" />
+    <None Include="Recources\gearBack.jpg" />
     <None Include="Recources\icon.ico" />
     <None Include="Recources\Background.jpg" />
     <EmbeddedResource Include="lame.exe">
