--- a/VibeBot/VibeBot/VibeBot.csproj
+++ b/VibeBot/VibeBot/VibeBot.csproj
@@ -62,6 +62,7 @@
     <Reference Include="MetroFramework.Fonts">
       <HintPath>lib\MetroFramework.Fonts.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="policy.2.0.taglib-sharp, Version=0.0.0.0, Culture=neutral, PublicKeyToken=db62eba44689b5b0, processorArchitecture=MSIL">
       <HintPath>..\packages\taglib.2.1.0.0\lib\policy.2.0.taglib-sharp.dll</HintPath>
       <Private>True</Private>
